--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 body,html{
   width: 100%;
   height: 100%;
+  text-align: center !important;
 }
-h1{
-  text-align: center;
+h1,h3{
+  text-align: center !important;
 }
 p{
-  text-align: center;
+  text-align: center !important;
 }
